@@ -1,3 +1,7 @@
+2000-03-20  lav
+
+	* kbdstate.c: add parentheses to be safe.
+
 2000-02-14  lav
 
 	* xrus.c: handle FocusOut; add more window properties for gnome.
